...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/design"
    tools:context="com.almortah.almortah.Search">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBlue"
                android:text="@string/filter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
...
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:textColor="@color/colorGreen"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
...
                    android:textColor="@color/colorWhite"
                    android:text="-"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/min"
                    android:maxLength="4"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/minPrice"
                    android:inputType="number" />
                <Button
...
                android:textColor="@color/colorWhite"
                android:text="-"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/max"
                android:maxLength="4"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/maxPrice"
                android:inputType="number" />
                <Button
...
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:id="@+id/filter"
                android:layout_margin="10dp"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:text="@string/filter1"/>

            <Button
                android:id="@+id/search"
                android:layout_width="280dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
...
                android:textColor="@color/colorWhite"
                android:text="@string/findSpecifcChalet"/>

        </LinearLayout>
        </ScrollView>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            />
    </android.support.v4.widget.DrawerLayout>
...
