...
    <string name="date">Date</string>
    <string name="delete_rate">Cancel/Rate</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="prices">Prices</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="downChalet">Downloading Chalets</string>
    <string name="wait">Please wait</string>

    <!-- Strings related to Settings -->
    <string name="login">Login</string>
...

    <string-array name="android_dropdown_arrays">
        <item>Customer</item>
        <item>Owner</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="guest">CONTINUE AS GUEST</string>
    <string name="signAlmortah">Rest-houses and Chalets now closer</string>

    <string name="google_maps_key">AIzaSyC3kyuKrNC7kLK6eEzoK94JmxjrHl1tRDw</string>
    <string name="title_activity_maps">Map</string>
    <string name="reservation">Reserve</string>

...
